# clinic

./: Procfile  README.md  db.sqlite3  pyproject.toml  requirements_dev.txt
clinic/: settings.py  urls.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contact_options.py  0003_auto_20210614_1436.py
contact/templates/base/: home.html  index.html  navbar.html
contact/templates/other/: add.html  delete.html  edit.html  view.html
static/css/: index.css
staticfiles/: staticfiles.json
staticfiles/css/: index.e4f4976d93da.css
users/templates/registration/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_rest_email_confirm.html  profile.html  register.html  reset_sent.html
