[tool.poetry]
name = "clinic"
version = "0.1.0"
description = ""
authors = ["liu chiko"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
black = "^21.5b2"
python-dotenv = "^0.17.1"
django-crispy-forms = "^1.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
